Day5/CICD/openshift/hello-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-microservice
  name: hello-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-microservice
  template:
    metadata:
      labels:
        app: hello-microservice
    spec:
      containers:
      - name: hello-microservice
        image: image-registry.openshift-image-registry.svc:5000/openshift/hello-microservice:latest
        imagePullPolicy: IfNotPresent
