Day5/CICD/openshift/hello-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-microservice
spec:
  selector:
    app: hello-microservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
