Day5/CICD/openshift/hello-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-microservice
spec:
  to:
    kind: Service
    name: hello-microservice
  port:
    targetPort: 8080
